2007-09-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_get_for_file)
	* src/sapwood-render.c (theme_pixbuf_set_filename): Resolve symbolic
	links before using the path as cache key. Otherwise when switching
	themes the client side can consider old and new files different and
	request new pixmap for the new theme. The symlink is resolved before
	making the request to the server, and if it resolves to the same file
	as the old one, we get a shared handle from the server. And since
	there's no server side reference counting, releasing the old pixmap
	will destroy the new one, causing BadPixmap very shortly.
	(NB#64446)

2007-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.9 ===

2007-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_layout, sapwood_style_class_init): Override
	draw_layout to draw the layout without any fancy effects for
	insensitive state. (NB#66054)

2007-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.8 ===

2007-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When limiting the mask
	to (smaller) clip rectangle, *really* calculate the mask offset
	correctly. Fixes clipping in menus.

2007-09-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_get_for_file): Trap and
	print X errors individually to help debugging.

2007-08-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (check_child_position): Initialize the position
	variable before bitwise ORing it.

2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When painting centered
	pixmaps don't expand but draw at most the size of the pixmap. Fixes
	uninitialized garbage appearing on screen when painting an arrow that
	is downscaled only in one direction.
